wxc/include/ewxw/wxc_glue.h

int        wxActivateEvent_GetActive( TSelf(wxActivateEvent) _obj );
/* wxCloseEvent */
TClassDefExtend(wxCloseEvent,wxEvent)
TBool      wxCloseEvent_CanVeto( TSelf(wxCloseEvent) _obj );
int        wxCloseEvent_GetLoggingOff( TSelf(wxCloseEvent) _obj );
int        wxCloseEvent_GetVeto( TSelf(wxCloseEvent) _obj );
void       wxCloseEvent_SetCanVeto( TSelf(wxCloseEvent) _obj, int canVeto );
void       wxCloseEvent_SetLoggingOff( TSelf(wxCloseEvent) _obj, int logOff );
void       wxCloseEvent_Veto( TSelf(wxCloseEvent) _obj, int veto );
TClass(wxCommandEvent) wxCommandEvent_Create( int _typ, int _id );
void       wxCommandEvent_Delete( TSelf(wxCommandEvent) _obj );
TClass(wxClientData) wxCommandEvent_GetClientData( TSelf(wxCommandEvent) _obj );
TClass(wxClientData) wxCommandEvent_GetClientObject( TSelf(wxCommandEvent) _obj );
long       wxCommandEvent_GetExtraLong( TSelf(wxCommandEvent) _obj );
long       wxCommandEvent_GetInt( TSelf(wxCommandEvent) _obj );
int        wxCommandEvent_GetSelection( TSelf(wxCommandEvent) _obj );
TStringLen wxCommandEvent_GetString( TSelf(wxCommandEvent) _obj, TStringOutVoid _buf );
TBool      wxCommandEvent_IsChecked( TSelf(wxCommandEvent) _obj );
TBool      wxCommandEvent_IsSelection( TSelf(wxCommandEvent) _obj );
void       wxCommandEvent_SetClientData( TSelf(wxCommandEvent) _obj, TClass(wxClientData) clientData );
void       wxCommandEvent_SetClientObject( TSelf(wxCommandEvent) _obj, TClass(wxClientData) clientObject );
void       wxCommandEvent_SetExtraLong( TSelf(wxCommandEvent) _obj, long extraLong );
void       wxCommandEvent_SetInt( TSelf(wxCommandEvent) _obj, int i );
void       wxCommandEvent_SetString( TSelf(wxCommandEvent) _obj, TString s );
TClass(wxDC) wxEraseEvent_GetDC( TSelf(wxEraseEvent) _obj );
TClass(wxObject) wxEvent_GetEventObject( TSelf(wxEvent) _obj );
int        wxEvent_GetEventType( TSelf(wxEvent) _obj );
int        wxEvent_GetId( TSelf(wxEvent) _obj );
TBool      wxEvent_GetSkipped( TSelf(wxEvent) _obj );
int        wxEvent_GetTimestamp( TSelf(wxEvent) _obj );
TBool      wxEvent_IsCommandEvent( TSelf(wxEvent) _obj );
void       wxEvent_SetEventObject( TSelf(wxEvent) _obj, TClass(wxObject) obj );
void       wxEvent_SetEventType( TSelf(wxEvent) _obj, int typ );
void       wxEvent_SetId( TSelf(wxEvent) _obj, int Id );
void       wxEvent_SetTimestamp( TSelf(wxEvent) _obj, int ts );
void       wxEvent_Skip( TSelf(wxEvent) _obj );
/* wxJoystickEvent */
TClassDefExtend(wxJoystickEvent,wxEvent)
TBool      wxJoystickEvent_ButtonDown( TSelf(wxJoystickEvent) _obj, int but );
TBool      wxJoystickEvent_ButtonIsDown( TSelf(wxJoystickEvent) _obj, int but );
TBool      wxJoystickEvent_ButtonUp( TSelf(wxJoystickEvent) _obj, int but );
int        wxJoystickEvent_GetButtonChange( TSelf(wxJoystickEvent) _obj );
int        wxJoystickEvent_GetButtonState( TSelf(wxJoystickEvent) _obj );
int        wxJoystickEvent_GetJoystick( TSelf(wxJoystickEvent) _obj );
void       wxJoystickEvent_GetPosition( TSelf(wxJoystickEvent) _obj, TPointOut(_x,_y) );
int        wxJoystickEvent_GetZPosition( TSelf(wxJoystickEvent) _obj );
TBool      wxJoystickEvent_IsButton( TSelf(wxJoystickEvent) _obj );
TBool      wxJoystickEvent_IsMove( TSelf(wxJoystickEvent) _obj );
TBool      wxJoystickEvent_IsZMove( TSelf(wxJoystickEvent) _obj );
void       wxJoystickEvent_SetButtonChange( TSelf(wxJoystickEvent) _obj, int change );
void       wxJoystickEvent_SetButtonState( TSelf(wxJoystickEvent) _obj, int state );
void       wxJoystickEvent_SetJoystick( TSelf(wxJoystickEvent) _obj, int stick );
void       wxJoystickEvent_SetPosition( TSelf(wxJoystickEvent) _obj, void* pos );
void       wxJoystickEvent_SetZPosition( TSelf(wxJoystickEvent) _obj, int zPos );
/* wxKeyEvent */
TClassDefExtend(wxKeyEvent,wxEvent)
TBool      wxKeyEvent_AltDown( TSelf(wxKeyEvent) _obj );
TBool      wxKeyEvent_ControlDown( TSelf(wxKeyEvent) _obj );
int        wxKeyEvent_GetKeyCode( TSelf(wxKeyEvent) _obj );
void       wxKeyEvent_GetPosition( TSelf(wxKeyEvent) _obj, TPointOut(_x,_y) );
int        wxKeyEvent_GetX( TSelf(wxKeyEvent) _obj );
int        wxKeyEvent_GetY( TSelf(wxKeyEvent) _obj );
TBool      wxKeyEvent_HasModifiers( TSelf(wxKeyEvent) _obj );
TBool      wxKeyEvent_MetaDown( TSelf(wxKeyEvent) _obj );
void       wxKeyEvent_SetKeyCode( TSelf(wxKeyEvent) _obj, int code );
TBool      wxKeyEvent_ShiftDown( TSelf(wxKeyEvent) _obj );
int        wxMenuEvent_GetMenuId( TSelf(wxMenuEvent) _obj );
int        wxMouseEvent_Button( TSelf(wxMouseEvent) _obj, int but );
TBool      wxMouseEvent_ButtonDClick( TSelf(wxMouseEvent) _obj, int but );
TBool      wxMouseEvent_ButtonDown( TSelf(wxMouseEvent) _obj, int but );
TBool      wxMouseEvent_ButtonIsDown( TSelf(wxMouseEvent) _obj, int but );
TBool      wxMouseEvent_ButtonUp( TSelf(wxMouseEvent) _obj, int but );
TBool      wxMouseEvent_ControlDown( TSelf(wxMouseEvent) _obj );
TBool      wxMouseEvent_Dragging( TSelf(wxMouseEvent) _obj );
TBool      wxMouseEvent_Entering( TSelf(wxMouseEvent) _obj );
void       wxMouseEvent_GetLogicalPosition( TSelf(wxMouseEvent) _obj, TClass(wxDC) dc, TPointOut(_x,_y) );
void       wxMouseEvent_GetPosition( TSelf(wxMouseEvent) _obj, TPointOut(_x,_y) );
int        wxMouseEvent_GetX( TSelf(wxMouseEvent) _obj );
int        wxMouseEvent_GetY( TSelf(wxMouseEvent) _obj );
TBool      wxMouseEvent_IsButton( TSelf(wxMouseEvent) _obj );
TBool      wxMouseEvent_Leaving( TSelf(wxMouseEvent) _obj );
TBool      wxMouseEvent_LeftDClick( TSelf(wxMouseEvent) _obj );
TBool      wxMouseEvent_LeftDown( TSelf(wxMouseEvent) _obj );
TBool      wxMouseEvent_LeftIsDown( TSelf(wxMouseEvent) _obj );
TBool      wxMouseEvent_LeftUp( TSelf(wxMouseEvent) _obj );
TBool      wxMouseEvent_MetaDown( TSelf(wxMouseEvent) _obj );
TBool      wxMouseEvent_MiddleDClick( TSelf(wxMouseEvent) _obj );
TBool      wxMouseEvent_MiddleDown( TSelf(wxMouseEvent) _obj );
TBool      wxMouseEvent_MiddleIsDown( TSelf(wxMouseEvent) _obj );
TBool      wxMouseEvent_MiddleUp( TSelf(wxMouseEvent) _obj );
TBool      wxMouseEvent_Moving( TSelf(wxMouseEvent) _obj );
TBool      wxMouseEvent_RightDClick( TSelf(wxMouseEvent) _obj );
TBool      wxMouseEvent_RightDown( TSelf(wxMouseEvent) _obj );
TBool      wxMouseEvent_RightIsDown( TSelf(wxMouseEvent) _obj );
TBool      wxMouseEvent_RightUp( TSelf(wxMouseEvent) _obj );
TBool      wxMouseEvent_ShiftDown( TSelf(wxMouseEvent) _obj );
void       wxMoveEvent_GetPosition( TSelf(wxMoveEvent) _obj, TPointOut(_x,_y) );
int        wxNavigationKeyEvent_GetDirection( TSelf(wxNavigationKeyEvent) _obj );
TBool      wxNavigationKeyEvent_IsWindowChange( TSelf(wxNavigationKeyEvent) _obj );
void       wxNavigationKeyEvent_SetDirection( TSelf(wxNavigationKeyEvent) _obj, int bForward );
/* wxNotifyEvent */
TClassDefExtend(wxNotifyEvent,wxCommandEvent)
void       wxNotifyEvent_Allow( TSelf(wxNotifyEvent) _obj );
TBool      wxNotifyEvent_IsAllowed( TSelf(wxNotifyEvent) _obj );
void       wxNotifyEvent_Veto( TSelf(wxNotifyEvent) _obj );
void*      wxPaletteChangedEvent_GetChangedWindow( TSelf(wxPaletteChangedEvent) _obj );
void       wxPaletteChangedEvent_SetChangedWindow( TSelf(wxPaletteChangedEvent) _obj, TClass(wxWindow) win );
int        wxQueryNewPaletteEvent_GetPaletteRealized( TSelf(wxQueryNewPaletteEvent) _obj );
void       wxQueryNewPaletteEvent_SetPaletteRealized( TSelf(wxQueryNewPaletteEvent) _obj, int realized );
/* wxScrollWinEvent */
TClassDefExtend(wxScrollWinEvent,wxEvent)
int        wxScrollWinEvent_GetOrientation( TSelf(wxScrollWinEvent) _obj );
int        wxScrollWinEvent_GetPosition( TSelf(wxScrollWinEvent) _obj );
void       wxScrollWinEvent_SetOrientation( TSelf(wxScrollWinEvent) _obj, int orient );
void       wxScrollWinEvent_SetPosition( TSelf(wxScrollWinEvent) _obj, int pos );
int        wxSetCursorEvent_GetX( TSelf(wxSetCursorEvent) _obj );
int        wxSetCursorEvent_GetY( TSelf(wxSetCursorEvent) _obj );
TBool      wxSetCursorEvent_HasCursor( TSelf(wxSetCursorEvent) _obj );
void       wxSetCursorEvent_SetCursor( TSelf(wxSetCursorEvent) _obj, TClass(wxCursor) cursor );
int        wxShowEvent_GetShow( TSelf(wxShowEvent) _obj );
void       wxShowEvent_SetShow( TSelf(wxShowEvent) _obj, int show );
void       wxSizeEvent_GetSize( TSelf(wxSizeEvent) _obj, TSizeOut(_w,_h) );
void       wxUpdateUIEvent_Enable( TSelf(wxUpdateUIEvent) _obj, TBool enable );
TBool      wxUpdateUIEvent_GetChecked( TSelf(wxUpdateUIEvent) _obj );
TBool      wxUpdateUIEvent_GetEnabled( TSelf(wxUpdateUIEvent) _obj );
int        wxUpdateUIEvent_GetSetChecked( TSelf(wxUpdateUIEvent) _obj );
int        wxUpdateUIEvent_GetSetEnabled( TSelf(wxUpdateUIEvent) _obj );
int        wxUpdateUIEvent_GetSetText( TSelf(wxUpdateUIEvent) _obj );
TStringLen wxUpdateUIEvent_GetText( TSelf(wxUpdateUIEvent) _obj, TStringOutVoid _buf );
void       wxUpdateUIEvent_SetText( TSelf(wxUpdateUIEvent) _obj, TString text );