wxcl/src/events/cffi/wxEvent.lisp

(in-package :wxcl-dialogs)

(defcfun ("wxCommandEvent_Create" wxCommandEvent_Create) :pointer
  (_typ :int)
  (_id :int))

(defcfun ("wxCommandEvent_Delete" wxCommandEvent_Delete) :void
  (_obj :pointer))

(defcfun ("wxEvent_GetTimestamp" wxEvent_GetTimestamp) :long
  (_obj :pointer))

(defcfun ("wxEvent_Skip" wxEvent_Skip) :void
  (_obj :pointer))

(defcfun ("wxEvent_GetEventType" wxEvent_GetEventType) :int
  (_obj :pointer))

(defcfun ("wxEvent_SetEventType" wxEvent_SetEventType) :void
  (_obj :pointer)
  (typ :int))

(defcfun ("wxEvent_GetEventObject" wxEvent_GetEventObject) :pointer
  (_obj :pointer))

(defcfun ("wxEvent_SetEventObject" wxEvent_SetEventObject) :void
  (_obj :pointer)
  (obj :pointer))

(defcfun ("wxEvent_SetTimestamp" wxEvent_SetTimestamp) :void
  (_obj :pointer)
  (ts :long))

(defcfun ("wxEvent_GetId" wxEvent_GetId) :int
  (_obj :pointer))

(defcfun ("wxEvent_SetId" wxEvent_SetId) :void
  (_obj :pointer)
  (Id :int))

(defcfun ("wxEvent_GetSkipped" wxEvent_GetSkipped) :int
  (_obj :pointer))

(defcfun ("wxEvent_IsCommandEvent" wxEvent_IsCommandEvent) :int
  (_obj :pointer))

(defcfun ("wxEvent_Clone" wxEvent_Clone) :pointer
  (_obj :pointer))

(defcfun ("wxEvent_SetCallbackUserData" wxEvent_SetCallbackUserData) :void
  (_obj :pointer)
  (obj :pointer))

(defcfun ("wxEvent_GetCallbackUserData" wxEvent_GetCallbackUserData) :pointer
  (_obj :pointer))

(defcfun ("wxCommandEvent_SetClientData" wxCommandEvent_SetClientData) :void
  (_obj :pointer)
  (clientData :pointer))

(defcfun ("wxCommandEvent_GetClientData" wxCommandEvent_GetClientData) :pointer
  (_obj :pointer))

(defcfun ("wxCommandEvent_SetClientObject" wxCommandEvent_SetClientObject) :void
  (_obj :pointer)
  (clientObject :pointer))

(defcfun ("wxCommandEvent_GetClientObject" wxCommandEvent_GetClientObject) :pointer
  (_obj :pointer))

(defcfun ("wxCommandEvent_GetSelection" wxCommandEvent_GetSelection) :int
  (_obj :pointer))

(defcfun ("wxCommandEvent_SetString" wxCommandEvent_SetString) :void
  (_obj :pointer)
  (s :string))

(defcfun ("wxCommandEvent_GetString" wxCommandEvent_GetString) :lisp-string
  (_obj :pointer))

(defcfun ("wxCommandEvent_IsChecked" wxCommandEvent_IsChecked) :int
  (_obj :pointer))

(defcfun ("wxCommandEvent_IsSelection" wxCommandEvent_IsSelection) :int
  (_obj :pointer))

(defcfun ("wxCommandEvent_SetExtraLong" wxCommandEvent_SetExtraLong) :void
  (_obj :pointer)
  (extraLong :long))

(defcfun ("wxCommandEvent_GetExtraLong" wxCommandEvent_GetExtraLong) :long
  (_obj :pointer))

(defcfun ("wxCommandEvent_SetInt" wxCommandEvent_SetInt) :void
  (_obj :pointer)
  (i :int))

(defcfun ("wxCommandEvent_GetInt" wxCommandEvent_GetInt) :int
  (_obj :pointer))

(defcfun ("wxNotifyEvent_Veto" wxNotifyEvent_Veto) :void
  (_obj :pointer))

(defcfun ("wxNotifyEvent_Allow" wxNotifyEvent_Allow) :void
  (_obj :pointer))

(defcfun ("wxNotifyEvent_IsAllowed" wxNotifyEvent_IsAllowed) :int
  (_obj :pointer))

(defcfun ("wxScrollWinEvent_GetOrientation" wxScrollWinEvent_GetOrientation) :int
  (_obj :pointer))

(defcfun ("wxScrollWinEvent_GetPosition" wxScrollWinEvent_GetPosition) :int
  (_obj :pointer))

(defcfun ("wxScrollWinEvent_SetOrientation" wxScrollWinEvent_SetOrientation) :void
  (_obj :pointer)
  (orient :int))

(defcfun ("wxScrollWinEvent_SetPosition" wxScrollWinEvent_SetPosition) :void
  (_obj :pointer)
  (pos :int))

(defcfun ("wxMouseEvent_IsButton" wxMouseEvent_IsButton) :int
  (_obj :pointer))

(defcfun ("wxMouseEvent_ButtonDown" wxMouseEvent_ButtonDown) :int
  (_obj :pointer)
  (but :int))

(defcfun ("wxMouseEvent_ButtonDClick" wxMouseEvent_ButtonDClick) :int
  (_obj :pointer)
  (but :int))

(defcfun ("wxMouseEvent_ButtonUp" wxMouseEvent_ButtonUp) :int
  (_obj :pointer)
  (but :int))

(defcfun ("wxMouseEvent_Button" wxMouseEvent_Button) :int
  (_obj :pointer)
  (but :int))

(defcfun ("wxMouseEvent_ButtonIsDown" wxMouseEvent_ButtonIsDown) :int
  (_obj :pointer)
  (but :int))

(defcfun ("wxMouseEvent_ControlDown" wxMouseEvent_ControlDown) :int
  (_obj :pointer))

(defcfun ("wxMouseEvent_MetaDown" wxMouseEvent_MetaDown) :int
  (_obj :pointer))

(defcfun ("wxMouseEvent_AltDown" wxMouseEvent_AltDown) :int
  (_obj :pointer))

(defcfun ("wxMouseEvent_ShiftDown" wxMouseEvent_ShiftDown) :int
  (_obj :pointer))

(defcfun ("wxMouseEvent_LeftDown" wxMouseEvent_LeftDown) :int
  (_obj :pointer))

(defcfun ("wxMouseEvent_MiddleDown" wxMouseEvent_MiddleDown) :int
  (_obj :pointer))

(defcfun ("wxMouseEvent_RightDown" wxMouseEvent_RightDown) :int
  (_obj :pointer))

(defcfun ("wxMouseEvent_LeftUp" wxMouseEvent_LeftUp) :int
  (_obj :pointer))

(defcfun ("wxMouseEvent_MiddleUp" wxMouseEvent_MiddleUp) :int
  (_obj :pointer))

(defcfun ("wxMouseEvent_RightUp" wxMouseEvent_RightUp) :int
  (_obj :pointer))

(defcfun ("wxMouseEvent_LeftDClick" wxMouseEvent_LeftDClick) :int
  (_obj :pointer))

(defcfun ("wxMouseEvent_MiddleDClick" wxMouseEvent_MiddleDClick) :int
  (_obj :pointer))

(defcfun ("wxMouseEvent_RightDClick" wxMouseEvent_RightDClick) :int
  (_obj :pointer))

(defcfun ("wxMouseEvent_LeftIsDown" wxMouseEvent_LeftIsDown) :int
  (_obj :pointer))

(defcfun ("wxMouseEvent_MiddleIsDown" wxMouseEvent_MiddleIsDown) :int
  (_obj :pointer))

(defcfun ("wxMouseEvent_RightIsDown" wxMouseEvent_RightIsDown) :int
  (_obj :pointer))

(defcfun ("wxMouseEvent_Dragging" wxMouseEvent_Dragging) :int
  (_obj :pointer))

(defcfun ("wxMouseEvent_Moving" wxMouseEvent_Moving) :int
  (_obj :pointer))

(defcfun ("wxMouseEvent_Entering" wxMouseEvent_Entering) :int
  (_obj :pointer))

(defcfun ("wxMouseEvent_Leaving" wxMouseEvent_Leaving) :int
  (_obj :pointer))

(defcfun ("wxMouseEvent_GetPosition" wxMouseEvent_GetPosition) :void
  (_obj :pointer)
  (xpos :int)
  (ypos :int))

(defcfun ("wxMouseEvent_GetLogicalPosition" wxMouseEvent_GetLogicalPosition) :void
  (_obj :pointer)
  (dc :pointer)
  (xpos :int)
  (ypos :int))

(defcfun ("wxMouseEvent_GetX" wxMouseEvent_GetX) :int
  (_obj :pointer))

(defcfun ("wxMouseEvent_GetY" wxMouseEvent_GetY) :int
  (_obj :pointer))

(defcfun ("wxSetCursorEvent_GetX" wxSetCursorEvent_GetX) :int
  (_obj :pointer))

(defcfun ("wxSetCursorEvent_GetY" wxSetCursorEvent_GetY) :int
  (_obj :pointer))

(defcfun ("wxSetCursorEvent_SetCursor" wxSetCursorEvent_SetCursor) :void
  (_obj :pointer)
  (cursor :pointer))

(defcfun ("wxSetCursorEvent_GetCursor" wxSetCursorEvent_GetCursor) :pointer
  (_obj :pointer))

(defcfun ("wxSetCursorEvent_HasCursor" wxSetCursorEvent_HasCursor) :int
  (_obj :pointer))

(defcfun ("wxKeyEvent_ControlDown" wxKeyEvent_ControlDown) :int
  (_obj :pointer))

(defcfun ("wxKeyEvent_MetaDown" wxKeyEvent_MetaDown) :int
  (_obj :pointer))

(defcfun ("wxKeyEvent_AltDown" wxKeyEvent_AltDown) :int
  (_obj :pointer))

(defcfun ("wxKeyEvent_ShiftDown" wxKeyEvent_ShiftDown) :int
  (_obj :pointer))

(defcfun ("wxKeyEvent_HasModifiers" wxKeyEvent_HasModifiers) :int
  (_obj :pointer))

(defcfun ("wxKeyEvent_GetKeyCode" wxKeyEvent_GetKeyCode) :int
  (_obj :pointer))

(defcfun ("wxKeyEvent_SetKeyCode" wxKeyEvent_SetKeyCode) :void
  (_obj :pointer)
  (code :int))

(defcfun ("wxKeyEvent_GetPosition" wxKeyEvent_GetPosition) :void
  (_obj :pointer)
  (xpos :int)
  (ypos :int))

(defcfun ("wxKeyEvent_GetX" wxKeyEvent_GetX) :int
  (_obj :pointer))

(defcfun ("wxKeyEvent_GetY" wxKeyEvent_GetY) :int
  (_obj :pointer))

(defcfun ("wxSizeEvent_GetSize" wxSizeEvent_GetSize) :void
  (_obj :pointer)
  (w :int)
  (h :int))

(defcfun ("wxMoveEvent_GetPosition" wxMoveEvent_GetPosition) :void
  (_obj :pointer)
  (x :int)
  (y :int))

(defcfun ("wxEraseEvent_GetDC" wxEraseEvent_GetDC) :pointer
  (_obj :pointer))

(defcfun ("wxActivateEvent_GetActive" wxActivateEvent_GetActive) :int
  (_obj :pointer))

(defcfun ("wxMenuEvent_GetMenuId" wxMenuEvent_GetMenuId) :int
  (_obj :pointer))

(defcfun ("wxCloseEvent_SetLoggingOff" wxCloseEvent_SetLoggingOff) :void
  (_obj :pointer)
  (logOff :int))

(defcfun ("wxCloseEvent_GetLoggingOff" wxCloseEvent_GetLoggingOff) :int
  (_obj :pointer))

(defcfun ("wxCloseEvent_Veto" wxCloseEvent_Veto) :void
  (_obj :pointer)
  (veto :int))

(defcfun ("wxCloseEvent_SetCanVeto" wxCloseEvent_SetCanVeto) :void
  (_obj :pointer)
  (canVeto :int))

(defcfun ("wxCloseEvent_CanVeto" wxCloseEvent_CanVeto) :int
  (_obj :pointer))

(defcfun ("wxCloseEvent_GetVeto" wxCloseEvent_GetVeto) :int
  (_obj :pointer))

(defcfun ("wxShowEvent_SetShow" wxShowEvent_SetShow) :void
  (_obj :pointer)
  (show :int))

(defcfun ("wxShowEvent_GetShow" wxShowEvent_GetShow) :int
  (_obj :pointer))

(defcfun ("wxJoystickEvent_GetPosition" wxJoystickEvent_GetPosition) :void
  (_obj :pointer)
  (x :int)
  (y :int))

(defcfun ("wxJoystickEvent_GetZPosition" wxJoystickEvent_GetZPosition) :int
  (_obj :pointer))

(defcfun ("wxJoystickEvent_GetButtonState" wxJoystickEvent_GetButtonState) :int
  (_obj :pointer))

(defcfun ("wxJoystickEvent_GetButtonChange" wxJoystickEvent_GetButtonChange) :int
  (_obj :pointer))

(defcfun ("wxJoystickEvent_GetJoystick" wxJoystickEvent_GetJoystick) :int
  (_obj :pointer))

(defcfun ("wxJoystickEvent_SetJoystick" wxJoystickEvent_SetJoystick) :void
  (_obj :pointer)
  (stick :int))

(defcfun ("wxJoystickEvent_SetButtonState" wxJoystickEvent_SetButtonState) :void
  (_obj :pointer)
  (state :int))

(defcfun ("wxJoystickEvent_SetButtonChange" wxJoystickEvent_SetButtonChange) :void
  (_obj :pointer)
  (change :int))

(defcfun ("wxJoystickEvent_SetPosition" wxJoystickEvent_SetPosition) :void
  (_obj :pointer)
  (pos :pointer))

(defcfun ("wxJoystickEvent_SetZPosition" wxJoystickEvent_SetZPosition) :void
  (_obj :pointer)
  (zPos :int))

(defcfun ("wxJoystickEvent_IsButton" wxJoystickEvent_IsButton) :int
  (_obj :pointer))

(defcfun ("wxJoystickEvent_IsMove" wxJoystickEvent_IsMove) :int
  (_obj :pointer))

(defcfun ("wxJoystickEvent_IsZMove" wxJoystickEvent_IsZMove) :int
  (_obj :pointer))

(defcfun ("wxJoystickEvent_ButtonDown" wxJoystickEvent_ButtonDown) :int
  (_obj :pointer)
  (but :int))

(defcfun ("wxJoystickEvent_ButtonUp" wxJoystickEvent_ButtonUp) :int
  (_obj :pointer)
  (but :int))

(defcfun ("wxJoystickEvent_ButtonIsDown" wxJoystickEvent_ButtonIsDown) :int
  (_obj :pointer)
  (but :int))

(defcfun ("wxUpdateUIEvent_GetChecked" wxUpdateUIEvent_GetChecked) :int
  (_obj :pointer))

(defcfun ("wxUpdateUIEvent_GetEnabled" wxUpdateUIEvent_GetEnabled) :int
  (_obj :pointer))

(defcfun ("wxUpdateUIEvent_GetText" wxUpdateUIEvent_GetText) :int
  (_obj :pointer)
  (_buf :pointer))

(defcfun ("wxUpdateUIEvent_GetSetText" wxUpdateUIEvent_GetSetText) :int
  (_obj :pointer))

(defcfun ("wxUpdateUIEvent_GetSetChecked" wxUpdateUIEvent_GetSetChecked) :int
  (_obj :pointer))

(defcfun ("wxUpdateUIEvent_GetSetEnabled" wxUpdateUIEvent_GetSetEnabled) :int
  (_obj :pointer))

(defcfun ("wxUpdateUIEvent_Check" wxUpdateUIEvent_Check) :void
  (_obj :pointer)
  (check :int))

(defcfun ("wxUpdateUIEvent_Enable" wxUpdateUIEvent_Enable) :void
  (_obj :pointer)
  (enable :int))

(defcfun ("wxUpdateUIEvent_SetText" wxUpdateUIEvent_SetText) :void
  (_obj :pointer)
  (text :string))

(defcfun ("wxPaletteChangedEvent_SetChangedWindow" wxPaletteChangedEvent_SetChangedWindow) :void
  (_obj :pointer)
  (win :pointer))

(defcfun ("wxPaletteChangedEvent_GetChangedWindow" wxPaletteChangedEvent_GetChangedWindow) :pointer
  (_obj :pointer))

(defcfun ("wxQueryNewPaletteEvent_SetPaletteRealized" wxQueryNewPaletteEvent_SetPaletteRealized) :void
  (_obj :pointer)
  (realized :int))

(defcfun ("wxQueryNewPaletteEvent_GetPaletteRealized" wxQueryNewPaletteEvent_GetPaletteRealized) :int
  (_obj :pointer))

(defcfun ("wxNavigationKeyEvent_GetDirection" wxNavigationKeyEvent_GetDirection) :int
  (_obj :pointer))

(defcfun ("wxNavigationKeyEvent_SetDirection" wxNavigationKeyEvent_SetDirection) :void
  (_obj :pointer)
  (bForward :int))

(defcfun ("wxNavigationKeyEvent_IsWindowChange" wxNavigationKeyEvent_IsWindowChange) :int
  (_obj :pointer))
